2007-04-20  Yen-Ju Chen <yjchenx gmail>

	* Return nil if icon is not found.

2007-03-19  Yen-Ju Chen <yjchenx gmail>

	* Disable unit kit if not specified.

2007-03-16  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/IconKit.h: Includes IKIconTheme.h now.

2007-03-16  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIcon.m: Updated formatting and indentation to be cleaner and
	match GNUstep coding style rules.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/IKIcon.h: Updated formatting and indentation to be cleaner and
	match GNUstep coding style rules.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIcon.m (-initWithIdentifier:, -update): Updated to use 
	IKIconTheme and -[NSImage imageNamed:] only as a fallback.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile.preamble:
	* GNUmakefile.postamble:
	Deleted old content not needed at all now we use etoile.make.
	* Source/GNUmakefile: Replaced GNUSTEP_INSTALLATION_DIR by 
	ETOILE_CORE_MODULE.

2007-03-13  Quentin Mathe <qmathe@club-internet.fr>

	New icon theme support (not yet used by IKIcon)
	* Headers/IKIconTheme.h:
	* Source/IKIconTheme.m:
	Added.
	* Source/GNUmakefile: Updated.
	* test.icontheme: Theme bundle used to test icon theme support. Also useful
	as a template. 
	Works and pass all unit tests.

2007-02-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Format README in reStructuedText

2007-02-28  Quentin Mathe <qmathe@club-internet.fr>

	* QuickTest.io: Added Io script to test basic IconKit features by enabling 
	to interact quickly and directly. Script interest and code quality is 
	really low for now...

2006-11-28  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIconProvider.m: Fixed icons path by creating the cache 
	in User domain rather than Local.
	* Source/IKApplicationIconProvider.m: Added logs statement to aid debugging. 
	Fixed composited icons path by creating the cache in User domain rather than 
	Local.